# smartsim

./: CMakeLists.txt  README.md  compile.sh
docker/scripts/: dev_into.sh  dev_start.sh  docker_bash.sh
docker/setup_host/: install_docker.sh
scripts/: smartsim.bashrc
src/: CMakeLists.txt
src/alg/: Object_Pool.h
src/app/bridge/bridge_dependencies/: CMakeLists.txt
src/app/bridge/bridge_dependencies/common/: CMakeLists.txt  VtdRDBIcd.h  bridge_gflags.cc  bridge_gflags.h  vehicle_chassis.h  vehicle_control.h  vehicle_localization.h
src/app/bridge/bridge_dependencies/conf/: udp_bridge_receiver_carsim_chassis.pb.txt  udp_bridge_receiver_carsim_localization.pb.txt  udp_bridge_receiver_perception_objects.pb.txt  udp_bridge_receiver_traffic_light.pb.txt  udp_bridge_sender_carsim_control.pb.txt
src/app/bridge/carsim_ros_bridge/: udp_bridge_receiver_chassis.cc  udp_bridge_receiver_chassis.h  udp_bridge_receiver_localization.cc  udp_bridge_receiver_localization.h  udp_bridge_sender_control.cc  udp_bridge_sender_control.h
src/app/bridge/vtd_ros_bridge/: udp_bridge_receiver_obstacles.cc  udp_bridge_receiver_obstacles.h  udp_bridge_receiver_traffic_light.cc  udp_bridge_receiver_traffic_light.h
src/app/core/core_dependencies/: CMakeLists.txt
src/app/core/core_dependencies/calibration/: CMakeLists.txt  control_calibration.cc  control_calibration.h  interpolation_2d.cc  interpolation_2d.h
src/app/core/core_dependencies/common/: CMakeLists.txt  simcore_gflags.cc  simcore_gflags.h
src/app/core/core_dependencies/conf/: calibration_table.pb.txt  control_conf.pb.txt  core_config.pb.txt
src/app/core/core_dependencies/interface/: canbus_interface.h  contorl_interface.h  localization_interface.h  perception_interface.h
src/app/simulator/carsim_integration/: CMakeLists.txt  carsim_simulation.cc
src/app/simulator/carsim_integration/carsim_dependencies/: CMakeLists.txt
src/app/simulator/carsim_integration/carsim_dependencies/common/: vs_api.h  vs_get_api.c
src/app/simulator/carsim_integration/carsim_dependencies/message/: msg_base.h  msg_manager.h
src/app/simulator/carsim_integration/vehicle_states_calc/: CMakeLists.txt  vehicle_states_calc.cc  vehicle_states_calc.h
src/app/simulator/vtd_integration/: CMakeLists.txt  vtd_simulation.cc  workflow_bev.hpp
src/app/simulator/vtd_integration/bev_detected/: frontleft_camera_detected.cc  frontleft_camera_detected.h
src/app/simulator/vtd_integration/query_ego_states/: query_ego_states.cc  query_ego_states.h
src/app/simulator/vtd_integration/send_trigger/: send_trigger.cc  send_trigger.h
src/app/simulator/vtd_integration/vtd_dependencies/: CMakeLists.txt  udp_port.h
src/app/simulator/vtd_integration/vtd_dependencies/common/: RDBHandler.hh
src/app/simulator/vtd_integration/vtd_dependencies/pattern/: method.h  task.hpp  workflow.h
src/cm/: CMakeLists.txt  cm.cpp  cm.h  node_handle.h  publisher.h  subscriber.h
src/cm/ap/: CMakeLists.txt  node_handle.hpp  publisher.hpp  subscriber.hpp
src/cm/ap/msgs/: adaptor.h
src/cm/art/: node_handle.hpp  publisher.hpp  subscriber.hpp
src/cm/art/msgs/: adaptor.h  adaptor_base.h  adaptor_control.h
src/cm/ros/: CMakeLists.txt  node_handle.hpp  package.xml  publisher.hpp  subscriber.hpp
src/cm/ros/msgs/: adaptor.h
src/common/: CMakeLists.txt
src/common/adapters/: CMakeLists.txt  adapter_gflags.cc  adapter_gflags.h
src/common/log/: Logger.cpp  Logger.h  LoggerCfg.h
src/common/network/: udpsocket_client.h  udpsocket_server.h
src/common/timer/: timer.cpp  timer.h
src/common/util/: CMakeLists.txt  proto_utils.cc  proto_utils.h  yaml_util.cc  yaml_util.h
src/interface/sim_interface/include/: viRDBIcd.h
src/pattern/: observer.hpp  task.hpp  traits.h  workflow.hpp  workflow_visualization.hpp
src/proto/bridge/: bridge_config.proto
toolchain/: toolchain_arm.cmake  toolchain_x86.cmake
